BornAgain-1.14.0, released 2018.12.07
  > No API changes
  > Summary:
    1) New instrument: depth probe
    2) Futher expansion of 3D View
    3) Import data assistant for 1D data
    4) Update of fitting tutorials on our documentation website
    5) Allow fitting of material properties
    6) Enable linked parameters in GUI ParticleDistribution
    7) Numerous bugfixes.

  * Bug #2116: Provide valid editing for fit parameters in GUI
  * Bug #2167: Application crash on attempt to load txt.gz file from GUI
  * Bug #2173: Inconsistent behavior of dock widgets between sample view and job view
  * Bug #2179: Saving and loading txt image in GUI causes rotation
  * Bug #2181: Loading a project file in the GUI overwrites number of threads
  * Bug #2183: Export to python doesn't add extension to file name
  * Bug #2184: Tuning widget disappears from simulation when "submit only" option is chosen
  * Bug #2189: Real time view shows alien tree on jobItem delete
  * Bug #2198: BornAgain GUI on certain Win10 stays collapsed on taskbar
  * Bug #2200: Trapezoid distribution generates edge values with zero probability
  * Bug #2213: Unit tests crashing if user system contains own googletest library in LD_LIBRARY_PATH
  * Bug #2214: GUI crash when deleting connection
  * Bug #2217: GUI crash on instrument adjustment for 1D data
  * Bug #2219: Appveyor build crash during unit text execution
  * Bug #2228: GUI: 1D data loader does not threat 'fixed width' columns correctly
  * Bug #2231: Reflectivity: strange behaviour at wavelength distribution
  * Bug #2235: Restore automatic linking of user data to instrument in Simulation tab
  * Bug #2236: GUI: Fitting failure on some minimization algorithms
  * Bug #2237: GUI: stop button in fitting panel does not work
  * Bug #2239: Crash on load of any saved project
  * Bug #2243: Instrument id is not updated when it is copied to job item
  * Bug #2245: Crash when running simulation with missing instrument