@@ -295,7 +295,7 @@ std::string SimulationToPython::defineSpecularBeam(const SpecularSimulation& sim
 
     const std::string axis_def = indent() + "alpha_i_axis = ";
     result << axis_def
-           << PythonFormatting::printAxis(*simulation.getAlphaAxis(), BornAgain::UnitsRad,
+           << PythonFormatting::printAxis(*simulation.coordinateAxis(), BornAgain::UnitsRad,
                                           axis_def.size())
            << "\n";
 
