@@ -48,7 +48,7 @@ TEST_F(SpecularSimulationTest, InitialState)
 {
     SpecularSimulation sim;
     ASSERT_THROW(sim.runSimulation(), std::runtime_error);
-    ASSERT_THROW(sim.getAlphaAxis(), std::runtime_error);
+    ASSERT_THROW(sim.coordinateAxis(), std::runtime_error);
     EXPECT_EQ(nullptr, sim.sample());
     ASSERT_THROW(sim.result(), std::runtime_error);
 }
@@ -75,7 +75,7 @@ TEST_F(SpecularSimulationTest, CloneOfEmpty)
 
     std::unique_ptr<SpecularSimulation> clone(sim.clone());
     ASSERT_THROW(clone->runSimulation(), std::runtime_error);
-    ASSERT_THROW(clone->getAlphaAxis(), std::runtime_error);
+    ASSERT_THROW(clone->coordinateAxis(), std::runtime_error);
     EXPECT_EQ(nullptr, clone->sample());
     ASSERT_THROW(clone->result(), std::runtime_error);
 
@@ -92,9 +92,9 @@ TEST_F(SpecularSimulationTest, SetBeamParameters)
 
     const auto& beam = sim.getInstrument().getBeam();
 
-    EXPECT_EQ(2u, sim.getAlphaAxis()->size());
-    EXPECT_EQ(1.0, sim.getAlphaAxis()->getMin());
-    EXPECT_EQ(3.0, sim.getAlphaAxis()->getMax());
+    EXPECT_EQ(2u, sim.coordinateAxis()->size());
+    EXPECT_EQ(1.0, sim.coordinateAxis()->getMin());
+    EXPECT_EQ(3.0, sim.coordinateAxis()->getMax());
     EXPECT_EQ(1.0, beam.getIntensity());
     EXPECT_EQ(1.0, beam.getWavelength());
     EXPECT_EQ(0.0, beam.getAlpha());
@@ -106,9 +106,9 @@ TEST_F(SpecularSimulationTest, SetBeamParameters)
     EXPECT_EQ(2.0, beam.getIntensity());
 
     sim.setBeamParameters(1.0, 10, 1.0 * Units::degree, 10.0 * Units::degree);
-    EXPECT_EQ(10u, sim.getAlphaAxis()->size());
-    EXPECT_EQ(1.0 * Units::degree, sim.getAlphaAxis()->getMin());
-    EXPECT_EQ(10.0 * Units::degree, sim.getAlphaAxis()->getMax());
+    EXPECT_EQ(10u, sim.coordinateAxis()->size());
+    EXPECT_EQ(1.0 * Units::degree, sim.coordinateAxis()->getMin());
+    EXPECT_EQ(10.0 * Units::degree, sim.coordinateAxis()->getMax());
     EXPECT_EQ(2.0, beam.getIntensity());
     EXPECT_EQ(1.0, beam.getWavelength());
     EXPECT_EQ(0.0, beam.getAlpha());
@@ -125,9 +125,9 @@ TEST_F(SpecularSimulationTest, SetBeamParameters)
     EXPECT_THROW(sim.setBeamParameters(-1.0, 1, 1.0, 2.0),
                  std::runtime_error);
 
-    EXPECT_EQ(10u, sim.getAlphaAxis()->size());
-    EXPECT_EQ(1.0 * Units::degree, sim.getAlphaAxis()->getMin());
-    EXPECT_EQ(10.0 * Units::degree, sim.getAlphaAxis()->getMax());
+    EXPECT_EQ(10u, sim.coordinateAxis()->size());
+    EXPECT_EQ(1.0 * Units::degree, sim.coordinateAxis()->getMin());
+    EXPECT_EQ(10.0 * Units::degree, sim.coordinateAxis()->getMax());
     EXPECT_EQ(2.0, beam.getIntensity());
     EXPECT_EQ(1.0, beam.getWavelength());
     EXPECT_EQ(0.0, beam.getAlpha());
