@@ -1,3 +1,6 @@
+  > API changes:
+    1) Python: method getAlphaAxis renamed into coordinateAxis in SpecularSimulation
+
 BornAgain-1.14.0, released 2018.12.07
   > No API changes
   > Summary:
